--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Adrex ChatBot - Enhance Your AI Experience">
     <meta property="og:description" content="Experience the next generation of AI conversation with Adrex ChatBot.">
     <meta property="og:image" content="https://i.ibb.co/Kb4Qb6G/received-433126073170794.jpg">
-    <meta property="og:url" content="YOUR_WEBSITE_URL_HERE">
+    <meta property="og:url" content="https://chat-bot-adrex-v1-by-nzr.onrender.com">
     <meta property="og:type" content="website">
 </head>
 <body>
