--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adrex ChatBot - Enhance Your AI Experience</title>
     <link rel="stylesheet" href="style.css">
+    <meta property="og:title" content="Adrex ChatBot - Enhance Your AI Experience">
+    <meta property="og:description" content="Experience the next generation of AI conversation with Adrex ChatBot.">
+    <meta property="og:image" content="https://i.ibb.co/Kb4Qb6G/received-433126073170794.jpg">
+    <meta property="og:url" content="https://chat-bot-adrexv1-by-nzr.onrender.com">
+    <meta property="og:type" content="website">
 </head>
 <body>
     <div class="animated-background">
@@ -12,33 +17,23 @@
         <div class="gradient-orb orb-2"></div>
         <div class="gradient-orb orb-3"></div>
     </div>
-
     <div class="user-status">
         <div class="status-dot"></div>
         <span id="userId">Connecting...</span>
     </div>
-
     <div class="container">
         <header class="header">
             <h1>Adrex ChatBot</h1>
             <p>Experience the next generation of AI conversation</p>
         </header>
-
         <main class="chat-container">
-            <div class="chat-messages" id="chatMessages">
-                <!-- Messages will be added here -->
-            </div>
-
+            <div class="chat-messages" id="chatMessages"></div>
             <div class="input-container">
                 <input type="text" class="input-field" id="userInput" placeholder="Type your message..." autocomplete="off">
-                <button class="send-btn" id="sendButton"> <i class="fas fa-paper-plane"></i>
-                </button>
+                <button class="send-btn" id="sendButton"><i class="fas fa-paper-plane"></i></button>
             </div>
         </main>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
-
-
