--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adrex ChatBot - Enhance Your AI Experience</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://i.ibb.co/2kc9X7x/Picsart-24-12-02-21-27-36-706.png" type="image/png">
     <meta property="og:title" content="Adrex ChatBot - Enhance Your AI Experience">
     <meta property="og:description" content="Experience the next generation of AI conversation with Adrex ChatBot.">
     <meta property="og:image" content="https://i.ibb.co/Kb4Qb6G/received-433126073170794.jpg">
